<resources>
    <string name="app_name">Keyz</string>
    <string name="login_hello">Welcome back</string>
    <string name="your_email">Please enter your email</string>
    <string name="your_password">Please enter your password</string>
    <string name="login_button">Sign in</string>
    <string name="no_account">Don\'t have an account ? </string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="immotep_logo_desc">Logo Keyz</string>
    <string name="keep_signed">Keep me signed in</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login_details">Please enter your details to sign in.</string>
    <string name="create_account">Create your account</string>
    <string name="create_account_subtitle">Join keyz for your peace of mind !</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="agree_terms">I agree to all Term, Privacy and Fees</string>
    <string name="already_account">Already have an account ?</string>
    <string name="first_name_error">Incorrect first name</string>
    <string name="last_name_error">Incorrect last name</string>
    <string name="email_error">Incorrect email</string>
    <string name="password_error">Incorrect password</string>
    <string name="password_confirm_error">Incorrect password confirmation</string>
    <string name="agree_terms_error">You must agree to all Term, Privacy and Fees</string>
    <string name="create_account_error">Error while creating account</string>
    <string name="bad_request">Error, you are not allowed to do that</string>
    <string name="unauthorized">Error, you are not authorized to do that</string>
    <string name="forbidden">Error, you are not allowed to do that</string>
    <string name="not_found">Error, content not found, please retry later</string>
    <string name="method_not_allowed">Error, method not allowed</string>
    <string name="not_acceptable">Error, response not acceptable</string>
    <string name="conflict">Error, conflict with server, please retry later</string>
    <string name="gone">Error, content not found, please retry later</string>
    <string name="request_entity_too_large">Error, request entity too large, try to put smaller content</string>
    <string name="unsupported_media_type">Error, unsupported media type, try another one</string>
    <string name="too_many_requests">Error, too many requests, please retry later</string>
    <string name="internal_server_error">Error, server is not responding, please retry later</string>
    <string name="not_implemented">Error, not implemented, please retry later or contact an admin</string>
    <string name="bad_gateway">Error, bad gateway, please retry later</string>
    <string name="service_unavailable">Error, unable to contact the server, please retry later or from another place</string>
    <string name="gateway_timeout">Error, unable to contact the server, please retry later or from another place</string>
    <string name="unknown_error">Error, unknown error, please retry later or ask an admin</string>
    <string name="login_error">Email or password incorrect</string>
    <string name="overview">Overview</string>
    <string name="RealProperty">Properties</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="register_password_error">The password must be at least 8 characters long</string>
    <string name="busy">Busy</string>
    <string name="available">Available</string>
    <string name="add_prop">Add a property</string>
    <string name="back">Back</string>
    <string name="open_in_messages">Open in messages</string>
    <string name="about_the_property">About the property</string>
    <string name="documents">Documents</string>
    <string name="start_inventory">Start an inventory</string>
    <string name="area">Area</string>
    <string name="tenant">Tenant</string>
    <string name="dates">Dates</string>
    <string name="rentMonth">Rent</string>
    <string name="rentPerMonth">Rent / Month</string>
    <string name="create_new_property">Create a new property</string>
    <string name="fill_property_infos">Please, fill your property informations</string>
    <string name="address_placeholder">Please, enter your property address</string>
    <string name="zip_placeholder">Please, enter your property zip code</string>
    <string name="country_placeholder">Please, enter your property country</string>
    <string name="area_placeholder">Please, enter your property area size, in m²</string>
    <string name="rental_placeholder">Please, enter your property rental per month</string>
    <string name="deposit_placeholder">Please, enter your property deposit</string>
    <string name="picture">Picture</string>
    <string name="address">Address</string>
    <string name="zip_code">Zip code</string>
    <string name="country">Country</string>
    <string name="deposit">Deposit</string>
    <string name="rental">Rental</string>
    <string name="add_picture">Add a picture</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="inventory_title">Inventory</string>
    <string name="entry_inventory">Entry inventory</string>
    <string name="exit_inventory">Exit inventory</string>
    <string name="edit">Edit</string>
    <string name="add_picture_from_gallery">Add picture from gallery</string>
    <string name="take_picture">Take picture</string>
    <string name="pictures">Picture(s)</string>
    <string name="comment">Comment</string>
    <string name="status">Status</string>
    <string name="new_state">New</string>
    <string name="medium_state">OK</string>
    <string name="needs_repair">Needs repair</string>
    <string name="very_good_state">Very good</string>
    <string name="good_state">Good</string>
    <string name="ok_state">OK</string>
    <string name="degraded_state">Degraded</string>
    <string name="bad_state">Bad</string>
    <string name="broken_state">Broken</string>
    <string name="select_an_element">Please, select an element</string>
    <string name="analyze_pictures">Analyze pictures to fill the information</string>
    <string name="validate_detail">Validate detail</string>
    <string name="validate_room">Validate room</string>
    <string name="comment_error">The comment must be at least 3 characters long</string>
    <string name="add_picture_error">You must add at least one picture</string>
    <string name="status_error">You must set a status</string>
    <string name="confirm_inventory">Confirm the inventory</string>
    <string name="entry_pictures">Entry pictures</string>
    <string name="exit_pictures">Exit pictures</string>
    <string name="compare_images">Compare entry and exit pictures</string>
    <string name="are_you_sure_exit">Are you sure to exit this page ?</string>
    <string name="not_saved_modifications">The modifications will be lost</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="cleaniness">Cleaniness</string>
    <string name="cleaniness_error">You must set a cleaniness state</string>
    <string name="room_name">Room name</string>
    <string name="detail_name">Detail name</string>
    <string name="add_room">Add a room</string>
    <string name="add_detail">Add a detail</string>
    <string name="very_clean">Very clean</string>
    <string name="clean">Clean</string>
    <string name="little_dirty">Little bit dirty</string>
    <string name="dirty">Dirty</string>
    <string name="filthy">Filthy</string>
    <string name="confirm_inventory_end">Are you sure to upload this inventory ?</string>
    <string name="not_forget">Have you forget anything such as a room or a detail ? If not please press confirm.</string>
    <string name="complete_room">Complete the</string>
    <string name="no_pictures_added">No pictures added</string>
    <string name="picture_not_supported">This picture is not supported</string>
    <string name="understand">Understand</string>
    <string name="cannot_make_exit_inventory">You cannot make an exit inventory</string>
    <string name="cannot_exit_inventory_text">You need to create at least on entry inventory before creating an exit inventory. The exit inventory will be based on the entry inventory.</string>
    <string name="sure_to_delete">Are you sure to delete </string>
    <string name="delete">Delete</string>
    <string name="basic_error">An error occured, please retry later</string>
    <string name="pending">Pending</string>
    <string name="property">Property</string>
    <string name="edit_property">Edit property</string>
    <string name="save">Save modifications</string>
    <string name="invite_tenant">Invite tenant</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="error_getting_rooms">Impossible to get the rooms, please retry later</string>
    <string name="invalid_email">Invalid email</string>
    <string name="cannot_add_room">An error occurred during the creation of the room, please retry later</string>
    <string name="cannot_add_detail">An error occurred during the creation of the detail, please retry later</string>
    <string name="tenant_email">Tenant email</string>
    <string name="update_profile">Update Profile</string>
    <string name="api_error_get_properties">Impossible to get the properties, please retry later</string>
    <string name="api_error_delete_property">Impossible to delete the property, please retry later</string>
    <string name="api_error_edit_property">Impossible to edit the property, please retry later</string>
    <string name="api_error_get_property">Impossible to get the property, please retry later</string>
    <string name="profile_api_error">Impossible to get the profile, please retry later</string>
    <string name="api_error_add_property">The property could not be added, please retry later</string>
    <string name="invite_tenant_api_error">Impossible to invite the tenant, please retry later</string>
    <string name="error_create_inventory_report">Error during the creation of the inventory report, please retry later</string>
    <string name="error_get_last_inventory_report">Impossible to get the last inventory report, impossible to make an exit inventory report, please retry later</string>
    <string name="error_get_all_rooms">Error during the room recuperation process, please retry later</string>
    <string name="send_invitation">Send invitation</string>
    <string name="appartment_number">Appartement number</string>
    <string name="ai_call_error">There was on error on the ai call, please retry later</string>
    <string name="not_end_date_before_start">The end date cannot be before the starting date</string>
    <string name="about">About</string>
    <string name="email">Email</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="damages">Damages</string>
    <string name="user_infos">User\'s informations</string>
    <string name="add_tenant">Add a tenant</string>
    <string name="end_lease">End the lease</string>
    <string name="cancel_invitation">Cancel the invitation</string>
    <string name="mod_property">Modify the property</string>
    <string name="delete_property">Delete the property</string>
    <string name="impossible_to_add_detail">Impossible to add the detail, please retry later</string>
    <string name="detail_already_exists">A detail with this name already exists</string>
    <string name="room_already_exists">A room with this name already exists</string>
    <string name="impossible_to_add_room">Impossible to add the room, please retry later</string>
    <string name="change_language">Change Language</string>
    <string name="delete_picture">Delete the picture</string>
    <string name="see_picture">See the picture</string>
    <string name="add_document">Add a document</string>
    <string name="dressing">Dressing</string>
    <string name="laundryroom">Laundry Room</string>
    <string name="bedroom">Bedroom</string>
    <string name="playroom">Playroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="toilet">Toilet</string>
    <string name="livingroom">Living Room</string>
    <string name="diningroom">Dining Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="hallway">Hallway</string>
    <string name="balcony">Balcony</string>
    <string name="cellar">Cellar</string>
    <string name="garage">Garage</string>
    <string name="storage">Storage</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="urgent">Urgent</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="submit">Submit</string>
    <string name="priority">Priority</string>
    <string name="room">Room</string>
    <string name="report_claim">Reporting a claim</string>
    <string name="close_edit">Close edit</string>
    <string name="mod_room">Modify the room</string>
    <string name="delete_room">Delete the room</string>
    <string name="welcome">Welcome</string>
    <string name="here_overview">Here is an overview of your</string>
    <string name="properties">properties</string>
    <string name="properties_cap">Properties</string>
    <string name="unread_messages">Unread messages</string>
    <string name="scheduled_inventory">Scheduled inventory</string>
    <string name="damage_in_progress">Damage in progress</string>
    <string name="available_properties">Available properties</string>
    <string name="reminders">Reminders</string>
    <string name="damages_list">Damage List</string>
    <string name="no_browser_found">No browser found to open the link</string>
    <string name="damage_detail">Damage Detail</string>
    <string name="fixed">Fixed</string>
    <string name="planned">Planned for the</string>
    <string name="awaiting_owner_confirmation">Awaiting owner confirmation</string>
    <string name="awaiting_tenant_confirmation">Awaiting tenant confirmation</string>
    <string name="click_here_to_confirm">Click here to confirm</string>
    <string name="state">State</string>
    <string name="in_progress">In progress</string>
    <string name="last_update">Last update</string>
    <string name="created_at">Created at</string>
    <string name="dashboard_tenant_resume">Here is a summary of your rental</string>
    <string name="my_rental">My Rental</string>
</resources>