...

val fakeInviteOutputValue = CreateOrUpdateResponse(
    id = fakeInviteOutput.id
)

val fakeProfileResponse =  ProfileResponse(
    id = "test123",
    email = "robin.denni@epitech.eu",
    firstname = "Test",
    lastname = "User",
    role = "owner",
    created_at = "2025-03-09T13:52:54Z+0000",
    updated_at = "2025-03-09T13:52:54Z+0000"
)
...
